perf/servicegraph/templates/istio-ingress.gen.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: entrypoint-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - svc-0.local
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entrypoint
spec:
  gateways:
  - entrypoint-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: svc-0
        port:
          number: 8080
